[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nonebot-plugin-anans-sketchbook"
version = "0.3.7"
authors = [
  { name = "ZiAzusa" }
]
description = "安安的素描本聊天框的NoneBot插件"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["nonebot", "nonebot2", "plugin"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "nonebot2>=2.3.0,<3.0.0",
  "nonebot-adapter-onebot>=2.3.0,<3.0.0",
  "pydantic>=1.10.2",
  "PyYAML>=5.0.0,<7.0.0",
  "Pillow>=9.0.0,<12.0.0",
  "httpx>=0.23.0,<1.0.0",
  "typing-extensions>=4.0.0,<5.0.0",
]

[project.urls]
"Homepage" = "https://github.com/ZiAzusa/nonebot_plugin_anans_sketchbook"
"Repository" = "https://github.com/ZiAzusa/nonebot_plugin_anans_sketchbook"

[project.optional-dependencies]
dev = [
  "nonebot2[dev]>=2.3.0,<3.0.0",
  "build>=1.0.0",
  "twine>=4.0.0",
  "flake8>=6.0.0",
  "black>=23.0.0",
]

[tool.setuptools]
packages = ["nonebot_plugin_anans_sketchbook"]
include-package-data = true

[tool.setuptools.package-data]
nonebot_plugin_anans_sketchbook = [
  "config.yaml",
  "resources/**/*",
  "utils/*",
]